[tool.poetry]
name = "sehyeongkim"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.4"
sqlalchemy = "^2.0.36"
pytest = "^8.3.3"
pydantic-settings = "^2.6.0"
jwt = "^1.3.1"
alembic = "^1.13.3"
uvicorn = "^0.32.0"
aiomysql = "^0.2.0"
pymysql = "^1.1.1"
pytest-asyncio = "^0.24.0"
pyjwt = "^2.9.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
